--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,13 @@ keywords    = ["terminal", "cargo", "tool", "format", "alignment"]
 categories  = ["command-line-utilities"]
 
 [dependencies] # align_by "="
-anyhow = "1.0.86"
-indoc  = "2.0.5"
+anyhow         = "1.0.86"
+indoc          = "2.0.5"
+clap           = {version = "4.5.16", features = ["cargo"]}
+thiserror      = "1.0.63"
+cargo_metadata = "0.18.1"
+env_logger     = "0.11.5"
+log            = "0.4.22"
+ignore         = "0.4"
+exitcode       = "1.1.2"
+regex          = "1.10.6"
